@@ -16,6 +16,7 @@ import java.util.List ;
 import junit.framework.TestCase ;
 import org.junit.runner.JUnitCore ;
 import org.junit.runner.Result ;
+import atlas.io.PeekReader;
 import atlas.junit.TextListener2 ;
 import atlas.logging.Log ;
 
@@ -25,11 +26,14 @@ import com.hp.hpl.jena.query.* ;
 import com.hp.hpl.jena.rdf.model.Model ;
 import com.hp.hpl.jena.rdf.model.ModelFactory ;
 import com.hp.hpl.jena.riot.JenaReaderTurtle2 ;
+import com.hp.hpl.jena.riot.tokens.Tokenizer;
+import com.hp.hpl.jena.riot.tokens.TokenizerText;
 import com.hp.hpl.jena.sparql.algebra.Algebra ;
 import com.hp.hpl.jena.sparql.algebra.Op ;
 import com.hp.hpl.jena.sparql.algebra.Transformer ;
 import com.hp.hpl.jena.sparql.core.Quad ;
 import com.hp.hpl.jena.sparql.sse.SSE ;
+import com.hp.hpl.jena.sparql.util.FmtUtils;
 import com.hp.hpl.jena.sparql.util.IndentedWriter ;
 import com.hp.hpl.jena.tdb.TC_TDB ;
 import com.hp.hpl.jena.tdb.TDBFactory ;
@@ -66,6 +70,13 @@ public class RunTDB
 
     public static void main(String ... args) throws IOException
     {
+        PeekReader r = PeekReader.make("<http://example/>") ;
+        Tokenizer tokenizer = new TokenizerText(r) ;
+        Node n = tokenizer.next().asNode() ;
+        System.out.println(FmtUtils.stringForNode(n)) ;
+        System.exit(0) ;
+        
+        
         TDBMaker.setImplFactory(new DatasetGraphSetup()) ;
         
         Dataset ds = TDBFactory.createDataset() ;
